# AWSGuradrail

./: .gitignore  README.md  pyproject.toml
bedrock/: config.py  main.py
