[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bedrock_demo"
version = "0.1.0"
authors = ["NA"]
description = "Bedrock demo"
readme = "README.md"

packages = [{ include = "bedrock" }]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
boto3 = "^1.38.30"


